# edu-md2app-xml

./: .gitignore  MANIFEST.in  README.md  package-lock.json  pyproject.toml
src/md2splunk/: file_handler.py  html_generator.py  image_handler.py  md2app.py  md_generator.py  xml_generator.py
src/md2splunk/static/: dashboard.css
src/md2splunk/styles/: style-lab.css  style.css
